airflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: airflow
  name: airflow-ingress
  namespace: airflow
spec:
  ingressClassName: nginx
  rules:
  - host: airflow.dataignite.io
    http:
      paths:
      - backend:
          service:
            name: airflow-webserver
            port:
              number: 8080
        path: /
        pathType: Prefix
